--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # cat << ►_◄ > /dev/null
-# (‑●‑●)> released under the WTFPL v2 license, by Gregory Pakosz (@gpakosz)
+# (‑●‑●)> released under the WTFPL v2 license, by Gregory Pakosz (@gpakosz), Modified by BarryKui
 
 
 # -- general -------------------------------------------------------------------
