--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,10 +10,10 @@ set -s escape-time 0                      # fastest command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s quiet on                           # disable various messages
 
-set -g prefix2 C-a                        # GNU-Screen compatible prefix
-bind C-a send-prefix -2
+set -g prefix2 \                        # GNU-Screen compatible prefix
+bind \ send-prefix -2
 
-set -g history-limit 5000                 # boost history
+set -g history-limit 500000                 # boost history
 
 # edit configuration
 bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
